stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_unknown_type_name.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "d948f6860d4010cca945ee430a70d16dca46d5eed0ca23b094ac99785fc5b352",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'from-consensus-buff?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2394,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2394,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "542841ab75c0653eb5804a833c07cc6fa638f3773f2a91ee15c77366c0c71eed",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: failed to parse type: \'foo\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2519,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2519,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7fd845e89c7bf47f659bde8e677dc424cb306f50072d110c0cacf1fb33576fc0",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: failed to parse type: \'foo\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2519,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2519,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "250f89bee59448c6bde2ab9ef1b691453d6cfa44d907bd757ff0f4f67b2ad690",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'from-consensus-buff?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2394,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2394,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6d8534be2a3ffc6931ade049040c1375bbf7f0b89c34b0beda21e574e95ad3cb",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: failed to parse type: \'foo\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2519,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2519,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9b844f6346eddefdefecd948131a8c834760c4da7b18f0dc1c93b493f539616a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: failed to parse type: \'foo\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2519,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2519,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b4b773adb2ab7c0a911bc91e5033a955693547e11a1a084578065badf8c6bdc0",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: unknown-type-name-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: failed to parse type: \'foo\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2519,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2519,
    ),
  )),
]
