stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_value_too_large.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "65b4b5273232a1675abbcfc3ef10bc3d906b3841c23374a45e71ccc53e150278",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7526aede109c52b2d53c7dab7bfa45cb97f1fbc0fe4f2050343d9dae34b02836",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a8bb8bff10ea5c92bed4ae04ebba6f4d686b6ba4ce7d8b3ff717302d172f7475",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ad71396daa08843eef1466565920daa29b10c33d1e4eea790d3aa9e6accd88bd",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "59a40862be6dd98d574fd33038657f7573a7a91d1162c9b171b82139f4389fff",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "da28ebf6e6b77e76482bbd03b119b6fbb37232da246caf687cb2ab87468b64f8",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1b2bc788c819675438943411ce9614cdbd2d1f2309643448d9d0a195053adfd2",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which was greater than maximum allowed value size) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1024,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1024,
    ),
  )),
]
